--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -10,3 +10,6 @@ projects:
         codeGenTarget: swift
         generatedFileName: Ziye-Auth
         docsFilePath: graphql
+extensions:
+  amplify:
+    version: 3
