--- a/roombee/Info.plist
+++ b/roombee/Info.plist
@@ -17,6 +17,14 @@
 			</array>
 		</dict>
 		<dict/>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array/>
+		</dict>
 	</array>
+	<key>UIApplicationSceneManifest</key>
+	<false/>
 </dict>
 </plist>
