--- a/roombee/Info.plist
+++ b/roombee/Info.plist
@@ -18,5 +18,11 @@
 		</dict>
 		<dict/>
 	</array>
+	<key>UIApplicationSceneManifest</key>
+	<dict/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
